--- a/res/xml/spirit.xml
+++ b/res/xml/spirit.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-16"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <TextureAtlas imagePath="donghua.png">
     <!-- Created with Adobe Flash CS6 version 12.0.0.481 -->
     <!-- http://www.adobe.com/products/flash.html -->
